added formspree to form

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                 <a class='projects__view-all' href="projects/index.html">view all projects</a>
             </section>
 
-            <!-- <section class="collaborate" id="contact">
+            <section class="collaborate" id="contact">
                 <h2>Let's <span class="red-color-and-border">collaborate</span></h2>
                 <ul class="collaborate__contact-info">
                     <li><span class='collaborate__block'>Email:</span><a
                             href="mailto:dieterschepers96@gmail.com">dieterschepers96@gmail.com</a></li>
-                    <li><span class='collaborate__block'>Telephone:</span><a href="tel:+470823381">0470 82 ** **</a>
+                    <li><span class='collaborate__block'>Telephone:</span><a href="tel:+470823381">0470 82 33 81</a>
                     </li>
                     <li><span class="collaborate__block margin-bottom">My links:</span>
                         <div class="about__links-wrap">
@@ -151,10 +151,10 @@
                     </li>
                 </ul>
 
-                <form action="" class="collaborate__form">
-                    <label for="fullname">
-                        <input class="form-styling" type="text" id="fullname" name="fullname" placeholder="Full name:">
-                        <span class='form-label'>Full name:</span>
+                <form action="https://formspree.io/f/xdoyjrgv" method="POST" class="collaborate__form">
+                    <label for="email">
+                        <input class="form-styling" type="text" id="email" name="email" placeholder="Email:">
+                        <span class='form-label'>Email:</span>
                     </label>
                     <label for="subject">
                         <input class="form-styling" type="text" id="subject" name="subject" placeholder="Subject:">
@@ -167,7 +167,7 @@
                     </label>
                     <input class="collaborate__form--submit-btn" type="submit" value="Send">
                 </form>
-            </section> -->
+            </section>
         </main>
 
 
