--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="#about">about</a></li>
                     <li><a href="#projects">projects</a></li>
-                    <!-- <li><a href="#contact">contact</a></li> -->
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
             <div class="mobile-navigation">
@@ -188,7 +188,7 @@
                 <ul>
                     <li><a href="projects/index.html">projects</a></li>
                     <li><a href="#about">about</a></li>
-                    <!-- <li><a href="#contact">contact</a></li> -->
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </nav>
         </footer>
