added 'student' to footer title

--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,7 @@
         <footer>
             <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
             <p>Dieter Schepers</p>
-            <p><span class='red-color'>fullstack</span> developer</p>
+            <p>Student<span class='red-color'>fullstack</span> developer</p>
             <div class="footer__links-wrap">
                 <a href='https://www.linkedin.com/in/dieter-schepers-a3b4471b7/' target="_blank"><img
                         src="../img/linkedin.svg" alt="linkedIn logo"></a>
