added new hamburger in comment

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <header>
             <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
             <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
+
+            <!-- new hamburger -->
+            <!-- <div class="menu-btn">
+                <div class="menu-btn__burger"></div>
+            </div> -->
+
             <nav class='header__navigation'>
                 <ul>
                     <li><a href="index.html">home</a></li>
@@ -39,7 +45,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#about">about</a></li>
-                    <!-- <li><a href="#contact">contact</a></li> -->
+                    <li><a href="#contact">contact</a></li>
                 </ul>
             </div>
         </header>
@@ -49,8 +55,10 @@
                 <div class="landingpage__text-button-wrap">
                     <div class='landingpage__text-wrap'>
                         <h1 class='landingpage__fullname'>Dieter Schepers</h1>
-                        <h2 class='landingpage__jobtitle'>Student <span class="red-color">full stack</span> developer</h2>
-                        <p class='landingpage__intro-text'>Enthusiastic developer who strives to make the internet a better place. Passionate in coding and design.</p>
+                        <h2 class='landingpage__jobtitle'>Student <span class="red-color">full stack</span> developer
+                        </h2>
+                        <p class='landingpage__intro-text'>Enthusiastic developer who strives to make the internet a
+                            better place. Passionate in coding and design.</p>
                     </div>
                     <div class='landingpage__button-wrap'>
                         <a class='landingpage__button--projects' href="projects/index.html">Projects</a>
@@ -68,7 +76,7 @@
                 <div class="about-wrap">
                     <h2 class='about__title'>About <span class="red-color-and-border">me</span></h2>
                     <p class="about__intro-text--thank">Hi I'm <span class='yellow-color'>Dieter</span></p>
-                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring 
+                    <p class="about__intro-text--info">Customer service-oriented, motivated and caring
                         developer.</p>
                     <div class="about__links">
                         <p class="about__my-links">My links:</p>
