--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,12 @@
         <header>
             <a class='header-image__logo' href='../index.html'><span class='yellow-color'>D</span>S</a>
             <img class='header-image__hamburger' src="../img/hamburger.svg" alt="hamburger icon">
+
+            <!-- new hamburger -->
+            <!-- <div class="menu-btn">
+                <div class="menu-btn__burger"></div>
+            </div> -->
+
             <nav class='header__navigation'>
                 <ul>
                     <li><a href="../index.html">home</a></li>
