refactored mobile navigation

--- a/index.html
+++ b/index.html
@@ -21,13 +21,32 @@
 
         <header>
             <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
-            <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
 
-            <!-- new hamburger -->
-            <!-- <div class="menu-btn">
+            <!-- HAMBURGER -->
+            <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
-            </div> -->
+            </div>
 
+            <!-- NAVIGATION -->
+            <nav class='header__navigation'>
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </nav>
+            <div class="mobile-navigation">
+                <ul>
+                    <li><a href="index.html">home</a></li>
+                    <li><a href="#projects">projects</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </div>
+
+             <!--
+            <img class='header-image__hamburger' src="img/hamburger.svg" alt="hamburger icon">
             <nav class='header__navigation'>
                 <ul>
                     <li><a href="index.html">home</a></li>
@@ -47,7 +66,7 @@
                     <li><a href="#about">about</a></li>
                     <li><a href="#contact">contact</a></li>
                 </ul>
-            </div>
+            </div> -->
         </header>
 
         <main>
