--- a/projects/index.html
+++ b/projects/index.html
@@ -13,32 +13,28 @@
 <body>
     <div class="wrapper">
         <header>
-            <a class='header-image__logo' href='../index.html'><span class='yellow-color'>D</span>S</a>
-            <img class='header-image__hamburger' src="../img/hamburger.svg" alt="hamburger icon">
+            <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
 
-            <!-- new hamburger -->
-            <!-- <div class="menu-btn">
+            <!-- HAMBURGER -->
+            <div class="menu-btn">
                 <div class="menu-btn__burger"></div>
-            </div> -->
+            </div>
 
+            <!-- NAVIGATION -->
             <nav class='header__navigation'>
                 <ul>
                     <li><a href="../index.html">home</a></li>
-                    <li><a href="../index.html#projects">projects</a></li>
-                    <li><a href="../index.html#about">about</a></li>
-                    <li><a href="../index.html#contact">contact</a></li>
+                    <li><a href="../#about">about</a></li>
+                    <li><a href="../#projects">projects</a></li>
+                    <li><a href="../#contact">contact</a></li>
                 </ul>
             </nav>
             <div class="mobile-navigation">
-                <div class='mobile-navigation__img-wrap'>
-                    <a class='header-image__logo' href='/'><span class='yellow-color'>D</span>S</a>
-                    <img class='header-image__hamburger' src="../img/hamburger.svg" alt="hamburger icon">
-                </div>
                 <ul>
                     <li><a href="../index.html">home</a></li>
-                    <li><a href="../index.html#projects">projects</a></li>
-                    <li><a href="../index.html#about">about</a></li>
-                    <li><a href="../index.html#contact">contact</a></li>
+                    <li><a href="../#about">about</a></li>
+                    <li><a href="../#projects">projects</a></li>
+                    <li><a href="../#contact">contact</a></li>
                 </ul>
             </div>
         </header>
@@ -77,7 +73,7 @@
         </div>
     </div>
 
-        <script src='../js/loopProjects.js'></script>
+        <script src='../js/projects.js'></script>
         <script src='../js/main.js'></script>
 </body>
 
