--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <a class='header-image__logo' href='index.html'><span class='yellow-color'>D</span>S</a>
+            <a class='header-image__logo' href='../index.html'><span class='yellow-color'>D</span>S</a>
 
             <!-- HAMBURGER -->
             <div class="menu-btn">
